--- a/src/App.scss
+++ b/src/App.scss
@@ -39,21 +39,30 @@ $grey: rgb(251, 251, 251);
   }
 }
 
-.main__container{
+.main__container {
   padding-top: 3rem;
-  input, textarea {
+  input,
+  textarea {
     margin-bottom: 0.8rem;
   }
   button {
     width: 10rem;
   }
-  .nav__container{
+
+  #image__gallery {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .nav__container {
     position: fixed;
     width: 100%;
+    z-index: 1000;
     top: 0;
-    div{
+    div {
       width: 100%;
-      ul{
+      ul {
         width: 50%;
         display: flex;
         align-items: center;
@@ -65,13 +74,29 @@ $grey: rgb(251, 251, 251);
         justify-content: flex-end;
       }
     }
-
   }
   .nav__container,
-  .images__gallery__container, 
+  .images__gallery__container,
   .form__image {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .form__image {
+    max-width: 600px !important;
+  }
+
+  .center__container {
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    justify-content: center;
+    width: 100%;
+    .form__container {
+      width: 100%;
+    }
   }
 
   .form__container {
@@ -79,8 +104,6 @@ $grey: rgb(251, 251, 251);
     background-color: $grey;
     padding: 2rem;
   }
-
-
 
   .images__gallery__container {
     header {
@@ -99,11 +122,11 @@ $grey: rgb(251, 251, 251);
         margin-bottom: 20px;
         overflow: auto;
         background-color: $grey;
-        
+
         img {
           width: 100%;
           height: 300px;
-          object-fit:cover;
+          object-fit: cover;
         }
         figcaption {
           margin-top: 10px;
@@ -118,13 +141,11 @@ $grey: rgb(251, 251, 251);
       .gallery::-webkit-scrollbar {
         display: none;
       }
-      
+
       .gallery {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
       }
     }
   }
-  
 }
-
